2002-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/mif.trm term/post.trm: Changed "continous" to "continuous".

	* term/metapost.trm: Support for 'set palette maxcolors'.

	* term/post.trm: Added "0 setgray" for the case Color==false in the
	definition of "DL".

2002-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/contrib/pm3dConvertToImage.awk: Fix for compressing several
	images in one postscript file.

2002-07-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Fallback to PM3DSURFACE style for 2 or 4 columns is no
	more required.

2002-07-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Error message for "using 1:2:3:4" when neither pm3d
	nor `using ... palette` is specified.

2002-07-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c demo/pm3d.dem: Binary datafiles now accept 'using'
	with 4 parameters for independent z and color values of splotting
	'with pm3d' and 'with lines|points palette'.

2002-07-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/plot3d.c docs/gnuplot.doc: Support plotting surfaces with
	color lines or points with color according to explicitly given 4th
	column, e.g. "splot ... using 1:2:3:4 with [line|point] palette".

	* src/plot3d.c: The color for the color value of lines, colors, pm3d
	vertices is taken from the 3rd data column unless the 4th column is 
	explicitly stated by "using"; thus, the same splot is obtained
	regardless whether the input data file has 3 or 4 columns.

	* src/axis.h: Added condition "|| PM3D_IMPLICIT == pm3d.implicit" into
	macro NEED_PALETTE(plot).

	* src/datafile.h src/datafile.c: Routine df_3dmatrix(): don't use
	macro NEED_PALETTE(plot), but take parameter input_palette() --- this
	avoids #include "pm3d.h" in datafile.c.

2002-06-16  James R. Van Zandt  <jrv@debian.org>

	* term/cgm.trm: silently drop any labels outside the CGM plot
	window.  (This should eliminate the errors like "gnuplot: