@@ -1,3 +1,8 @@
+2002-07-07  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/pm3d.h src/pm3d.c: Removed unused field use_column in
+	pm3d_struct.
+
 2002-07-04  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* term/mif.trm term/post.trm: Changed "continous" to "continuous".
@@ -707,7 +712,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/07/04 16:37:00 $).
+	last modification date (from the tag $Date: 2002/07/07 18:15:55 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
